kubernetes/apps/zijleinde/openproject/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openproject
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - project.zijleinde.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hocuspocus
      backendRefs:
        - name: openproject-hocuspocus
          port: 1234
    - backendRefs:
        - name: openproject
          port: 8080
